// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Alert Error 1`] = `
<Alert
  element="This is an error message!"
  icon={
    <MdCancel
      size={32}
    />
  }
  styling="error-background"
  type="error"
>
  <DisplayBox
    element="This is an error message!"
    icon={
      <div
        style={
          Object {
            "color": "#D8292F",
          }
        }
      >
        <MdCancel
          size={32}
        />
      </div>
    }
    styling="error-background"
  >
    <div
      className="display-box error-background"
    >
      <div
        className="display-icon"
      >
        <div
          style={
            Object {
              "color": "#D8292F",
            }
          }
        >
          <MdCancel
            size={32}
          >
            <IconBase
              attr={
                Object {
                  "viewBox": "0 0 24 24",
                }
              }
              size={32}
            >
              <svg
                fill="currentColor"
                height={32}
                size={32}
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 24 24"
                width={32}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
                  key="0"
                />
              </svg>
            </IconBase>
          </MdCancel>
        </div>
      </div>
      <div
        className="display-right-element"
      >
        This is an error message!
      </div>
    </div>
  </DisplayBox>
</Alert>
`;

exports[`Storyshots Alert Info 1`] = `
<Alert
  element="This is an info message!"
  icon={
    <MdInfo
      size={32}
    />
  }
  styling="info-background"
  type="info"
>
  <DisplayBox
    element="This is an info message!"
    icon={
      <React.Fragment>
        <MdInfo
          size={32}
        />
      </React.Fragment>
    }
    styling="info-background"
  >
    <div
      className="display-box info-background"
    >
      <div
        className="display-icon"
      >
        <MdInfo
          size={32}
        >
          <IconBase
            attr={
              Object {
                "viewBox": "0 0 24 24",
              }
            }
            size={32}
          >
            <svg
              fill="currentColor"
              height={32}
              size={32}
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 24 24"
              width={32}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                key="0"
              />
            </svg>
          </IconBase>
        </MdInfo>
      </div>
      <div
        className="display-right-element"
      >
        This is an info message!
      </div>
    </div>
  </DisplayBox>
</Alert>
`;

exports[`Storyshots Alert Mobile 1`] = `
<Alert
  element="This is a success message!"
  icon={
    <MdCheckBox
      size={32}
    />
  }
  styling="success-background"
  type="success"
>
  <DisplayBox
    element="This is a success message!"
    icon={
      <div
        style={
          Object {
            "color": "#2E8540",
          }
        }
      >
        <MdCheckBox
          size={32}
        />
      </div>
    }
    styling="success-background"
  >
    <div
      className="display-box success-background"
    >
      <div
        className="display-icon"
      >
        <div
          style={
            Object {
              "color": "#2E8540",
            }
          }
        >
          <MdCheckBox
            size={32}
          >
            <IconBase
              attr={
                Object {
                  "viewBox": "0 0 24 24",
                }
              }
              size={32}
            >
              <svg
                fill="currentColor"
                height={32}
                size={32}
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 24 24"
                width={32}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  key="0"
                />
              </svg>
            </IconBase>
          </MdCheckBox>
        </div>
      </div>
      <div
        className="display-right-element"
      >
        This is a success message!
      </div>
    </div>
  </DisplayBox>
</Alert>
`;

exports[`Storyshots Alert Success 1`] = `
<Alert
  element="This is a success message!"
  icon={
    <MdCheckBox
      size={32}
    />
  }
  styling="success-background"
  type="success"
>
  <DisplayBox
    element="This is a success message!"
    icon={
      <div
        style={
          Object {
            "color": "#2E8540",
          }
        }
      >
        <MdCheckBox
          size={32}
        />
      </div>
    }
    styling="success-background"
  >
    <div
      className="display-box success-background"
    >
      <div
        className="display-icon"
      >
        <div
          style={
            Object {
              "color": "#2E8540",
            }
          }
        >
          <MdCheckBox
            size={32}
          >
            <IconBase
              attr={
                Object {
                  "viewBox": "0 0 24 24",
                }
              }
              size={32}
            >
              <svg
                fill="currentColor"
                height={32}
                size={32}
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 24 24"
                width={32}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  key="0"
                />
              </svg>
            </IconBase>
          </MdCheckBox>
        </div>
      </div>
      <div
        className="display-right-element"
      >
        This is a success message!
      </div>
    </div>
  </DisplayBox>
</Alert>
`;

exports[`Storyshots Alert Warning 1`] = `
<Alert
  element="This is a warning message!"
  icon={
    <MdError
      size={32}
    />
  }
  styling="warning-background"
  type="warning"
>
  <DisplayBox
    element="This is a warning message!"
    icon={
      <div
        style={
          Object {
            "color": "rgb(252, 186, 25)",
          }
        }
      >
        <MdError
          size={32}
        />
      </div>
    }
    styling="warning-background"
  >
    <div
      className="display-box warning-background"
    >
      <div
        className="display-icon"
      >
        <div
          style={
            Object {
              "color": "rgb(252, 186, 25)",
            }
          }
        >
          <MdError
            size={32}
          >
            <IconBase
              attr={
                Object {
                  "viewBox": "0 0 24 24",
                }
              }
              size={32}
            >
              <svg
                fill="currentColor"
                height={32}
                size={32}
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 24 24"
                width={32}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
                  key="0"
                />
              </svg>
            </IconBase>
          </MdError>
        </div>
      </div>
      <div
        className="display-right-element"
      >
        This is a warning message!
      </div>
    </div>
  </DisplayBox>
</Alert>
`;
